fix issue with wave overlapping text

--- a/main.css
+++ b/main.css
@@ -37,6 +37,7 @@ header {
   grid-area: illustration;
 }
 .text {
+  z-index: 1;
   grid-area: text;
 }
 
